fix non-highlighted space character at line-wrap; add more metacharacters to ignore; change 'cont' from string to object containing title, author, and text

--- a/typing-illuminated.css
+++ b/typing-illuminated.css
@@ -9,12 +9,15 @@
 }
 
 body {
-  background-color: lightblue;
   margin: 0;
 }
 
+span {
+    white-space: pre-wrap;
+}
+
 .container {
-  background-color: white;;
+  background-color: white;
   max-width: 600px;
   margin: 0 auto;
   box-shadow: rgba(149, 157, 165, 0.4) 0px 8px 24px;
@@ -31,7 +34,9 @@ h1 {
 
 p {
   line-height: 1.5;
+  margin-bottom: 0;
 }
+
 
 #cont {
   font-family: "Ubuntu Mono";
